contrast color fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -14,6 +14,7 @@ body {
 
 nav {
     background-color: #0f2b7c;
+    color: #fff;
 }
 
 nav ul {
@@ -56,11 +57,12 @@ h1 {
 main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 25px; 
+    gap: 25px;
     padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
 }
+
 .card {
     border: 1px solid #d0d0d0;
     border-radius: 5px;
@@ -83,6 +85,7 @@ main {
     height: auto;
     display: block;
 }
+
 .card p {
     padding: 15px;
 }
@@ -92,7 +95,7 @@ main {
     padding: 15px;
 }
 
-figcaption{
+figcaption {
     font-style: italic;
     margin-top: 5px;
 }
@@ -119,7 +122,7 @@ section.card figure img {
     clear: both;
 }
 
-.bandera_text{
+.bandera_text {
     margin: 0;
     width: 80%;
 }
